--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,13 +16,24 @@ header {
   line-height: 1.5;
 }
 
-.images {
+#images {
+  display: flex;
+  justify-content: space-around;
+}
+#score-card {
+  min-height: 100px;
+  font-size: 3em;
+  display: flex;
+  flex-direction: column;
+}
+
+#score-card p {
+  text-align: center;
+  height: fit-content;
+}
+#score {
   display: flex;
   justify-content: space-between;
-  border: 1px solid red;
-}
-.score-card {
-  min-height: 100px;
 }
 .buttons {
   display: flex;
