--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
 :root {
   --background: #ea9010;
-  --text-color: #90be6d;
+  --text-color: #183700;
 }
 
 body {
@@ -41,7 +41,16 @@ header {
 }
 .choices {
   margin-right: 10px;
-  height: 30px;
+
   justify-content: center;
+  font-weight: 600;
+  border: solid 2px red;
+  outline: 0;
+  padding: 1rem 4rem;
+  font-size: 1.5rem;
+  letter-spacing: 0.08rem;
+  background-color: var(--background);
+  border-radius: 0.35rem;
+  position: relative;
   cursor: pointer;
 }
